second commit on master

--- a/bonjour.html
+++ b/bonjour.html
@@ -4,6 +4,14 @@
 		<title>Bonjour</title>
 	</head>
 	<body>
-		<p>Hi</p>
+		<p style="color:blue;">Hello</p>
+		<div>
+			<span style="background-color:grey;">
+				Je suis ici pour tester Git/GitHub.
+			</span>
+			<span style="background-color:black;color:white;">
+				C'est génial.
+			</span>
+		</div>
 	</body>
 </html>
