--- a/aurevoir.html
+++ b/aurevoir.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Bonjour</title>
+		<title>Au revoir</title>
 	</head>
 	<body>
-		<p style="color:blue;">Hello</p>
+		<p style="color:blue;">ByeBye</p>
 		<div>
 			<span style="background-color:grey;">
-				Je suis ici pour tester Git/GitHub.
+				Je suis ici pour finir de tester Git/GitHub.
 			</span>
 			<span style="background-color:black;color:white;">
-				C'est g&eacute;nial.
+				C'est g&eacute;nial. J\'adore !
 			</span>
 		</div>
 	</body>
