--- a/aurevoir.html
+++ b/aurevoir.html
@@ -4,7 +4,7 @@
 		<title>Au revoir</title>
 	</head>
 	<body>
-		<p style="color:blue;">ByeBye</p>
+		<p style="color:blue;">Bye</p>
 		<div>
 			<span style="background-color:grey;">
 				Je suis ici pour finir de tester Git/GitHub.
