--- a/bonjour.html
+++ b/bonjour.html
@@ -4,10 +4,10 @@
 		<title>Bonjour</title>
 	</head>
 	<body>
-		<p style="color:blue;">Hello</p>
+		<p style="color:blue;"> Hello ! </p>
 		<div>
 			<span style="background-color:grey;">
-				Je suis ici pour tester Git/GitHub.
+				Je suis ici pour tester Git/GitHub...
 			</span>
 			<span style="background-color:black;color:white;">
 				C'est g&eacute;nial.
