--- a/bonjour.html
+++ b/bonjour.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Bonjour</title>
+		<title>Ola</title>
 	</head>
 	<body>
 		<p style="color:blue;"> Hello ! </p>
